--- a/src/style/modules/_sidebar.scss
+++ b/src/style/modules/_sidebar.scss
@@ -189,6 +189,7 @@
         top:0;
         left:0;
         width:15rem;
+        height: 1200px;
     }
 
     .navi{
